[project]
name = "siroapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "sentence-transformers>=4.1.0",
    "sirochatora",
    "streamlit>=1.45.1",
]

[tool.uv.sources]
sirochatora = { path = "../../../../opt/libnekokan/lib/sirochatora-20250619-py3-none-any.whl" }
